--- a/config.json
+++ b/config.json
@@ -88,9 +88,24 @@
   },
   "custom_category": [
     {
+      "name": "热门",
+      "type": "tv",
+      "query": "热门"
+    },
+        {
       "name": "港剧",
       "type": "tv",
       "query": "港剧"
+    },
+        {
+      "name": "热门",
+      "type": "movie",
+      "query": "热门"
+    },
+        {
+      "name": "最新",
+      "type": "movie",
+      "query": "最新"
     }
   ]
 }
